force-app/main/default/objects/Allotment__c/Allotment__c.object-meta.xml
<CustomObject>
    <label>Allotment</label>
    <nameField>
        <label>Allotment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allotments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>