force-app/main/default/objects/Allotment__c/fields/Academic_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Academic_Cohort__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Academic Cohort</label>
    <referenceTo>AcademicTerm</referenceTo>
    <relationshipLabel>Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>