force-app/main/default/objects/Allotment__c/fields/Academic_Terms_Session__c.field-meta.xml
<CustomField>
    <fullName>Academic_Terms_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Terms (Session)</label>
    <referenceTo>AcademicSession</referenceTo>
    <relationshipLabel>Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>