force-app/main/default/objects/Allotment__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Year</label>
    <referenceTo>AcademicYear</referenceTo>
    <relationshipLabel>Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>