force-app/main/default/objects/Allotment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>LearningCourse</referenceTo>
    <relationshipLabel>Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>