force-app/main/default/objects/Allotment__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>CourseOffering</referenceTo>
    <relationshipLabel>Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>