force-app/main/default/objects/Allotment__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>