force-app/main/default/objects/Allotment__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>