force-app/main/default/objects/Allotment__c/fields/Industry_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Industry_Specialization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Specialization</label>
    <referenceTo>Industry_Specialization__c</referenceTo>
    <relationshipLabel>Allotments</relationshipLabel>
    <relationshipName>Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>