force-app/main/default/objects/Allotment__c/fields/ISB_External_Id__c.field-meta.xml
<CustomField>
    <fullName>ISB_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>ISB External Id</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>