force-app/main/default/objects/Allotment__c/fields/ISB_Line_Up_ID__c.field-meta.xml
<CustomField>
    <fullName>ISB_Line_Up_ID__c</fullName>
    <externalId>true</externalId>
    <label>ISB Line Up ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>