force-app/main/default/objects/Allotment__c/fields/ISB_Sessions__c.field-meta.xml
<CustomField>
    <fullName>ISB_Sessions__c</fullName>
    <label>ISB Sessions</label>
    <length>55</length>
    <type>Text</type>
</CustomField>