force-app/main/default/objects/Allotment__c/fields/Preferred_Sessions2__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Sessions2__c</fullName>
    <label>Final Allotment Sessions</label>
    <length>55</length>
    <type>Text</type>
</CustomField>