force-app/main/default/objects/Allotment__c/fields/Status_New__c.field-meta.xml
<CustomField>
    <fullName>Status_New__c</fullName>
    <label>Status New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In-active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>