force-app/main/default/objects/Allotment__c/fields/Teaching_Date__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Date__c</fullName>
    <label>Teaching Date</label>
    <type>Date</type>
</CustomField>