force-app/main/default/objects/Allotment__c/fields/Teaching_Dates__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Dates__c</fullName>
    <label>Teaching Dates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>