force-app/main/default/objects/Allotment__c/fields/Teaching_Location_P__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Location_P__c</fullName>
    <label>Teaching Location (P)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mohali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>