force-app/main/default/objects/Allotment__c/fields/Term_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_To_Date__c</fullName>
    <label>Term To Date</label>
    <type>Date</type>
</CustomField>